Add missing glossary usage

--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -23,7 +23,7 @@ The objective of this thesis is to develop an explainable \acrlong{drl} model fo
 
 First, \acrshort{drl} models, such as \acrfull{a2c}, \acrfull{ppo}, \acrfull{ddpg}, \acrfull{td3} and \acrfull{sac}, will be implemented to learn the optimal portfolio allocation from high-dimensional environment representations. The algorithms will be trained on historical financial data, including technical and macroeconomic indicators, with the goal of capturing the complex market dynamics. Each of the algorithms is better suited to a particular scenario, for instance, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance.
 
-Second, post-hoc explainability techniques: feature importance, \acrfull{shap} values and \acrfull{lime} analysis, will be applied to interpret the model's decisions. The goal of these is to understand which market conditions, represented by financial data, lead to the actions/decisions, encoded as portfolio weights. 
+Second, post-hoc explainability techniques: \Gls{featureimportance}, \acrfull{shap} values and \acrfull{lime} analysis, will be applied to interpret the model's decisions. The goal of these is to understand which market conditions, represented by financial data, lead to the actions/decisions, encoded as portfolio weights. 
 
 Finally, the performance of the \acrshort{drl} models will be analysed in different scenarios, including the impact of a larger financial environment representation and the portfolio size and asset composition.The results will be compared with traditional portfolio optimisation methods to evaluate the effectiveness of the proposed approach.
 
