--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -13,19 +13,19 @@ Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread
     \item lack of transparency of \acrshort{ml} models, often referred to as black boxes, making it increasingly complex to interpret the algorithm's decisions. 
 \end{enumerate}
 
-In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known to as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. Thus, highlighting its importance and the need to explore its advantages in more complex models, while facilitating the understanding of both the models decisions and the explainability methods.
+In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. Thus, highlighting its importance and the need to explore its advantages in more complex models, while facilitating the understanding of both the models decisions and the explainability methods.
 
 Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing post-hoc explainability techniques. 
 
 \section{Objectives} \label{sec:introduction-objectives}
 
-The objective of this thesis is to develop an explainable \acrlong{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. The project aims to bridge the gap between advance machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and black box nature of \acrshort{ml} models.
+The objective of this thesis is to develop an explainable \acrlong{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. The project aims to bridge the gap between cutting-edge machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and black box nature of \acrshort{ml} models.
 
 First, \acrshort{drl} models, such as \acrfull{a2c}, \acrfull{ppo}, \acrfull{ddpg}, \acrfull{td3} and \acrfull{sac}, will be implemented to learn the optimal portfolio allocation from high-dimensional environment representations. The algorithms will be trained on historical financial data, including technical and macroeconomic indicators, with the goal of capturing the complex market dynamics. Each of the algorithms is better suited to a particular scenario, for instance, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance.
 
 Second, post-hoc explainability techniques: \Gls{featureimportance}, \acrfull{shap} values and \acrfull{lime} analysis, will be applied to interpret the model's decisions. The goal of these is to understand which market conditions, represented by financial data, lead to the actions/decisions, encoded as portfolio weights. 
 
-Finally, the performance of the \acrshort{drl} models will be analysed in different scenarios, including the impact of a larger financial environment representation and the portfolio size and asset composition.The results will be compared with traditional portfolio optimisation methods to evaluate the effectiveness of the proposed approach.
+Finally, the performance of the \acrshort{drl} models will be analysed in different scenarios, including the impact of a larger financial environment representation and the portfolio size and asset composition. The results will be compared with traditional portfolio optimisation methods to evaluate the effectiveness of the proposed approach.
 
 \section{Report Structure} \label{sec:introduction-structure}
 
@@ -33,7 +33,7 @@ This report is organised into six chapters, each of which focuses on a concrete 
 
 The current chapter, \ref{ch:introduction}, presents the motivation and the objectives of this thesis. It gives an overview of the potential of \acrshort{drl} in portfolio optimisation and its main challenges, particularly the lack of transparency of \acrshort{ml} models. 
 
-Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including financial markets and machine learning concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}) and techniques in their intersection, \acrshort{drl}. In addition, it gives an overview of the post-hoc explainability techniques: feature importance, \ACRfull{shap} values and \acrfull{lime} analysis, which will be used to interpret the model's decisions. In addition, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
+Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including financial markets and machine learning concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}) and techniques in their intersection, \acrshort{drl}. In addition, it gives an overview of the post-hoc explainability techniques: feature importance, \ACRfull{shap} values and \acrfull{lime} analysis, which will be used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
 
 The methodology chapter \ref{ch:methodology} describes the techniques and methods used to solve the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation, reward function, and training process.
 
