--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -64,7 +64,7 @@
 \newglossaryentry{twindelayeddeepdeterministicpolicygradient}
 {
     name=Twin Delayed Deep Deterministic Policy Gradient,
-    description={Extension of DDPG that addresses the overestimation bias in value function estimation by using two critic networks and delaying policy updates}
+    description={Extension of \Gls{deepdeterministicpolicygradient} that addresses the overestimation bias in value function estimation by using two critic networks and delaying policy updates}
 }
 \newglossaryentry{softactorcritic}
 {
