--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -1,10 +1,10 @@
 \chapter{Introduction} \label{ch:introduction}
 
-\Gls{financialmarkets} are highly complex systems influenced by numerous factors, both financial and political events, social trends and technological advancements. Moreover, their evolving and stochastic nature requires using the most advance computational developments to model the financial environment. The tasks of financial time series prediction and \Gls{portfoliooptimisation} are considerably complex, due to the semi-strong form of market efficiency and the high level of noise. \cite{Shen2020}
+\Gls{financialmarkets} are highly complex systems influenced by numerous factors, including financial and political events, social trends and technological advancements. Moreover, their evolving and stochastic nature requires using the most advance computational developments to model the financial environment. The tasks of financial time series prediction and \Gls{portfoliooptimisation} are considerably intricate, due to the semi-strong form of market efficiency and the high level of noise. \cite{Shen2020}
 
-\Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute actions based on an algorithm and trade assets without human intervention. In its early days, algorithmic trading considered the usage of a computer program to follow a predefined strategy \cite{Lei2020}. Nonetheless, in recent years, algorithmic trading has evolved to a problem in which environment perception entails learning feature representation from highly non-stationary and noisy financial time series data and decision-making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without any supervised information \cite{Ma2021}.
+\Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute trading actions based on an algorithm without human intervention. In its early days, the field mainly studied the usage of a computer program to follow a predefined strategy \cite{Lei2020}. Nonetheless, in recent years, algorithmic trading has evolved to a problem in which environment perception entails learning feature representation from highly non-stationary and noisy financial time series data and decision-making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without supervision \cite{Ma2021}.
 
-\acrfull{ml} is at an advantage for the task given its capability to learn from historical data and make predictions about the future state of the environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Shen2020,Nti2020,Wu2023,Hasan2024}. However, their main disadvantage is their inability to directly deal with trading and require an additional step to convert the predictions into actionable strategies. In contrast, the application of \acrfull{rl} would allow the algorithm to learn a trading strategy directly from the environment, without the need for a prediction step. \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
+\acrfull{ml} is at an advantage for the task given its capability to learn from historical data and make predictions about the future state of an environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Shen2020,Nti2020,Wu2023,Hasan2024}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} would allow the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
 
 Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread adoption in the financial industry remains limited. This is primarily due to following challenges \cite{Cortes2024}:
 \begin{enumerate}
@@ -19,13 +19,13 @@ Consequently, this thesis will focus on addressing the aforementioned challenges
 
 \section{Objectives} \label{sec:introduction-objectives}
 
-The objective of this thesis is to develop an explainable \acrlong{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. The project aims to bridge the gap between cutting-edge machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and black box nature of \acrshort{ml} models.
+The objective of this thesis is to develop an explainable \acrlong{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. This project aims to bridge the gap between cutting-edge machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and black box nature of \acrshort{ml} models.
 
 First, \acrshort{drl} models, such as \acrfull{a2c}, \acrfull{ppo}, \acrfull{ddpg}, \acrfull{td3} and \acrfull{sac}, will be implemented to learn the optimal portfolio allocation from high-dimensional environment representations. The algorithms will be trained on historical financial data, including technical and macroeconomic indicators, with the goal of capturing the complex market dynamics. Each of the algorithms is better suited to a particular scenario, for instance, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance.
 
 Second, post-hoc explainability techniques: \Gls{featureimportance}, \acrfull{shap} values and \acrfull{lime} analysis, will be applied to interpret the model's decisions. The goal of these is to understand which market conditions, represented by financial data, lead to the actions/decisions, encoded as portfolio weights. 
 
-Finally, the performance of the \acrshort{drl} models will be analysed in different scenarios, including the impact of a larger financial environment representation and the portfolio size and asset composition. The results will be compared with traditional portfolio optimisation methods to evaluate the effectiveness of the proposed approach.
+Finally, the performance of the \acrshort{drl} models will be analysed in different scenarios, including the impact of a larger financial environment representation, portfolio size and asset composition. The results will be compared with traditional portfolio optimisation methods to evaluate the effectiveness of the proposed approach.
 
 \section{Report Structure} \label{sec:introduction-structure}
 
@@ -37,7 +37,7 @@ Chapter \ref{ch:background} provides an overview of the theoretical background o
 
 The methodology chapter \ref{ch:methodology} describes the techniques and methods used to solve the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation, reward function, and training process.
 
-The results of the experiments are presented in chapter \ref{ch:results}, which analyses and evaluates the results obtained from the proposed implementation, while critically discussing the findings. It provides a detailed comparison of the proposed \acrshort{drl} strategies with traditional portfolio optimisation methods. Furthermore, it consists of an in-depth analysis and explanation of the model's decisions using post-hoc explainability techniques, in particular, \acrshort{shap} values, feature importance and \ACRshort{lime} analysis. 
+The results of the experiments are presented in chapter \ref{ch:results}, which analyses and evaluates the results obtained from the proposed implementation, while critically discussing the findings. It provides a detailed comparison of the proposed \acrshort{drl} strategies with traditional portfolio optimisation methods. Furthermore, it consists of an in-depth analysis of the model's decisions using post-hoc explainability techniques, in particular, \acrshort{shap} values, feature importance and \ACRshort{lime} analysis. 
 
 Chapter \ref{ch:issues} discusses the legal, social, ethical and professional implications within the context of the project. By addressing these issues, the project aims to ensure that the proposed solution adheres to industry standards, while considering the implications of the technology.
 
