--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -13,7 +13,7 @@ Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread
     \item lack of transparency of \acrshort{ml} models, often referred to as black boxes, making it increasingly complex to interpret the algorithm's decisions. 
 \end{enumerate}
 
-In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. Thus, highlighting its importance and the need to explore its advantages in more complex models, while facilitating the understanding of both the models decisions and the explainability methods.
+In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its black-box nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant in the context of financial usage, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024} have explored the concept of explainability in financial applications. This highlights its importance and the need to explore its advantages in more complex models, without inadvertently increasing the complexity of the overall methodology. 
 
 Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing post-hoc explainability techniques. 
 
