--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -96,6 +96,17 @@
     description={Parameter that is set before the learning process begins and control the learning process of a machine learning model, such as learning rate, batch size, and number of layers in a neural network}
 }
 
+\newglossaryentry{efficientfrontier}{
+    name=Efficient Frontier,
+    text={efficient frontier},
+    description={Set of optimal portfolios that offer the highest expected return for a given level of risk, or the lowest risk for a given level of expected return, in the context of portfolio optimisation}
+}
+\newglossaryentry{modernportfoliotheory}{
+    name=Modern Portfolio Theory,
+    text={Modern Portfolio Theory},
+    description={Investment theory that aims to construct a portfolio of assets that maximises expected return for a given level of risk, or minimises risk for a given level of expected return, through diversification}
+}
+
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
 \newacronym{rl}{RL}{\Gls{reinforcementlearning}}
@@ -109,3 +120,5 @@
 \newacronym{lime}{LIME}{\Gls{localinterpretablemodelagnosticexplanations}}
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
+\newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
+\newacronym{cal}{CAL}{Capital Allocation Line}
