Fix bibliography typo

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -255,7 +255,7 @@
    issue = {1},
    journal = {The Journal of Finance},
    month = {3},
-   pages = {77-91ç},
+   pages = {77-91},
    publisher = {World Scientific Publishing Co.},
    title = {Portfolio selection},
    volume = {7},
